@@ -24,3 +24,10 @@ Improvements of the multiplayer ui:
 - Added a gui front-end to various commands, brought up by double clicking
   a player name, replacing the old whisper dialog
 - Automatically select the game the selected player is in
+
+***
+
+The "Update All" feature of the add-ons update dialog has been fixed
+(it should not crash anymore).
+
+***
